# aepython

./: README.md  pyproject.toml
browser_automation/: 2.1_scraping_simple_text_with_selenium.py  2.2_automate_login_process.py
