[tool.poetry]
name = "aepython"
version = "0.1.0"
description = ""
authors = ["ajeless <ajeless@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.15.2"
webdriver-manager = "^4.0.1"
ruff = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
